--- a/main.css
+++ b/main.css
@@ -58,7 +58,18 @@
         text-transform: uppercase;
         font-family: 'Spline Sans Mono', monospace;
         font-weight: 400;
+        padding:3%;
         }
+        .hovereffect .text-container {
+            text-transform: uppercase; 
+            text-align: center;
+            position: relative;
+            font-size: 1em;
+            padding: 10px;
+            font-family: 'Spline Sans Mono', monospace;
+            color:#3400f1;
+          }
+    
 
         .hovereffect .text-container {
             text-transform: lowercase; 
@@ -108,7 +119,7 @@
     /* clip-path: polygon(5% 5%, 100% 0%, 100% 75%, 75% 75%, 75% 100%, 50% 75%, 0% 75%); */
   }
 
-  
+
 
 .box-wrapper{
   height:350px;
